// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prefix updates the position of the label when a value is entered 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "center",
          "paddingRight": 1,
          "paddingTop": 1,
        },
        {
          "bottom": 0,
          "left": 0,
          "paddingTop": 0,
          "right": 0,
          "top": 7,
        },
      ]
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={3.125}
      selectable={true}
      selectionColor="rgb(160, 215, 42)"
      style={
        [
          {
            "fontFamily": "inter-regular",
          },
          {
            "color": "rgb(66, 78, 86)",
          },
          {
            "textAlign": "left",
          },
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      $
    </Text>
  </View>
</View>
`;

exports[`Prefix updates the styles when focused for the icon 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "borderColor": "rgb(125, 176, 14)",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "justifyContent": "center",
        "paddingRight": 8,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "display": "flex",
            "fill": "rgb(136, 112, 196)",
            "height": 24,
            "verticalAlign": "middle",
            "width": 24,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="invoice"
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4287131844,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.414A2 2 0 0 0 19.414 6L16 2.586A2 2 0 0 0 14.586 2H6Zm0 18V4h8.586L18 7.414V20H6Zm7.293-10.293C12.626 9.04 12.003 9 11.977 9 11.45 9 11 9.45 11 10c0 .646.128.752 1.243 1.03C13.274 11.288 15 11.72 15 14a2.995 2.995 0 0 1-2 2.814v.184a1 1 0 0 1-2 0v-.2a4.502 4.502 0 0 1-1.707-1.09 1 1 0 1 1 1.414-1.415c.667.667 1.291.707 1.317.707.528 0 .976-.448.976-1 0-.646-.127-.75-1.242-1.03C10.728 12.713 9 12.28 9 10a2.996 2.996 0 0 1 2-2.816V7a1 1 0 0 1 2 0v.2a4.49 4.49 0 0 1 1.707 1.093 1 1 0 0 1-1.414 1.414Z"
          fill={
            {
              "payload": 4284840068,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Prefix updates the styles when focused for the label 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      {
        "borderColor": "rgb(125, 176, 14)",
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "center",
          "paddingRight": 1,
          "paddingTop": 1,
        },
        false,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={3.125}
      selectable={true}
      selectionColor="rgb(160, 215, 42)"
      style={
        [
          {
            "fontFamily": "inter-regular",
          },
          {
            "color": "rgb(66, 78, 86)",
          },
          {
            "textAlign": "left",
          },
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      $
    </Text>
  </View>
</View>
`;

exports[`Prefix updates the styles when input is invalid for the icon 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      false,
      {
        "borderColor": "rgb(201, 66, 33)",
      },
    ]
  }
>
  <View
    style={
      {
        "justifyContent": "center",
        "paddingRight": 8,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "display": "flex",
            "fill": "rgb(136, 112, 196)",
            "height": 24,
            "verticalAlign": "middle",
            "width": 24,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="invoice"
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4287131844,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.414A2 2 0 0 0 19.414 6L16 2.586A2 2 0 0 0 14.586 2H6Zm0 18V4h8.586L18 7.414V20H6Zm7.293-10.293C12.626 9.04 12.003 9 11.977 9 11.45 9 11 9.45 11 10c0 .646.128.752 1.243 1.03C13.274 11.288 15 11.72 15 14a2.995 2.995 0 0 1-2 2.814v.184a1 1 0 0 1-2 0v-.2a4.502 4.502 0 0 1-1.707-1.09 1 1 0 1 1 1.414-1.415c.667.667 1.291.707 1.317.707.528 0 .976-.448.976-1 0-.646-.127-.75-1.242-1.03C10.728 12.713 9 12.28 9 10a2.996 2.996 0 0 1 2-2.816V7a1 1 0 0 1 2 0v.2a4.49 4.49 0 0 1 1.707 1.093 1 1 0 0 1-1.414 1.414Z"
          fill={
            {
              "payload": 4284840068,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Prefix updates the styles when input is invalid for the label 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      false,
      {
        "borderColor": "rgb(201, 66, 33)",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "center",
          "paddingRight": 1,
          "paddingTop": 1,
        },
        false,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={3.125}
      selectable={true}
      selectionColor="rgb(160, 215, 42)"
      style={
        [
          {
            "fontFamily": "inter-regular",
          },
          {
            "color": "rgb(66, 78, 86)",
          },
          {
            "textAlign": "left",
          },
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      $
    </Text>
  </View>
</View>
`;

exports[`Prefix when disabled updates the icon 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      {
        "justifyContent": "center",
        "paddingRight": 8,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="24"
      bbWidth="24"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "display": "flex",
            "fill": "rgb(136, 112, 196)",
            "height": 24,
            "verticalAlign": "middle",
            "width": 24,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="invoice"
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4287131844,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.414A2 2 0 0 0 19.414 6L16 2.586A2 2 0 0 0 14.586 2H6Zm0 18V4h8.586L18 7.414V20H6Zm7.293-10.293C12.626 9.04 12.003 9 11.977 9 11.45 9 11 9.45 11 10c0 .646.128.752 1.243 1.03C13.274 11.288 15 11.72 15 14a2.995 2.995 0 0 1-2 2.814v.184a1 1 0 0 1-2 0v-.2a4.502 4.502 0 0 1-1.707-1.09 1 1 0 1 1 1.414-1.415c.667.667 1.291.707 1.317.707.528 0 .976-.448.976-1 0-.646-.127-.75-1.242-1.03C10.728 12.713 9 12.28 9 10a2.996 2.996 0 0 1 2-2.816V7a1 1 0 0 1 2 0v.2a4.49 4.49 0 0 1 1.707 1.093 1 1 0 0 1-1.414 1.414Z"
          fill={
            {
              "payload": 4290098613,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Prefix when disabled updates the label 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "center",
          "paddingRight": 1,
          "paddingTop": 1,
        },
        false,
      ]
    }
  >
    <Text
      accessibilityRole="text"
      adjustsFontSizeToFit={false}
      allowFontScaling={true}
      collapsable={false}
      maxFontSizeMultiplier={3.125}
      selectable={true}
      selectionColor="rgb(160, 215, 42)"
      style={
        [
          {
            "fontFamily": "inter-regular",
          },
          {
            "color": "rgb(181, 181, 181)",
          },
          {
            "textAlign": "left",
          },
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "letterSpacing": 0,
          },
        ]
      }
    >
      $
    </Text>
  </View>
</View>
`;
